[fix] show blue highlight when click div on mobile

--- a/src/app/assets/css/common.scss
+++ b/src/app/assets/css/common.scss
@@ -115,3 +115,9 @@
   display: -moz-grid;
   display: -ms-grid;
 }
+
+@mixin user-select ($settings) {
+  user-select        : $settings;
+  -webkit-user-select: $settings;
+  -moz-user-select   : $settings;
+}
