--- a/src/app/components/drink/drink.component.scss
+++ b/src/app/components/drink/drink.component.scss
@@ -84,7 +84,7 @@
         margin  : 10px 30px;
         width   : calc(100% - 60px);
         height  : 350px;
-        cursor  : pointer;
+        @include user-select(none);
 
         .left-control {
           position: absolute;
@@ -141,9 +141,13 @@
       }
 
       .card-description {
-        width    : 100%;
-        height   : 50px;
-        font-size: 24px;
+        margin-bottom: 10px;
+        @include display-flex();
+        align-items    : flex-end;
+        justify-content: center;
+        width          : 100%;
+        height         : 70px;
+        font-size      : 24px;
       }
 
       // .button-box {
@@ -174,6 +178,10 @@
 
 .active {
   animation: card-animation 0.7s ease-in-out;
+}
+
+.pointer {
+  cursor: pointer;
 }
 
 @include keyframes(card-animation) {
